CSS/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html{
    max-width: 100% !important; 
    overflow-x: hidden;
}


Body {
    font-family: "Acme", sans-serif;
    font-size: 15px;
    color: #89abe3ff;
    background-color: #fcf6f5ff;
    line-height: 1.1;
    max-width: 100%;
    overflow-x: hidden;
}

.section-intro .hline {
    width: 120px;
    height: 2px;
    background-color: rgba(0, 30, 61, 0.356);
    margin: 16px auto 0 auto;
}

.section-intro {
    text-align: center;
    padding-bottom: 10px;
}

/*
Header Section
*/

.navbar {
    background: #89abe3ff;
    color: #fcf6f5ff;
}

.navbar .nav-link {
    font-size: 16px;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fcf6f5ff;
}

.navbar-dark .navbar-nav .nav-link.active {
    color: #e87a00;
}

.nav-link:hover {
    background-color: #fcf6f5ff;
    color: #e87a00;
    cursor: pointer;
}

/*
Hero Section
*/

#home {
    background: url(../images/banner-1050614_1920.jpg) rgba(246, 212, 210, 0.6);
    /* Image by <a href="https://pixabay.com/users/geralt-9301 */
    background-blend-mode: overlay;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 40rem;
    color: #001e3d;
    overflow-x: hidden;
}

.hero-logo {
    border-radius: 30%;
    padding-top: 20px;
    background-color: #a16ae8;
    box-shadow: 0px 4px 17px 0px #001f3d;
}

.home-title {
    font-size: 3em;
}

span {
    color: #89abe3ff;
    text-shadow: 2px 2px 0.5px #001f3d;
}

.text-container h1 {
    margin: auto 0;
}

.getStarted-btn {
    text-decoration: none;
    text-align: center;
    background-color: #89abe3ff;
    border-radius: 375rem;
    padding: 10px 20px;
    color: #fcf6f5ff;
    font-size: 1rem;
}

/*
About Section
*/

#about {
    align-items: center;
    justify-content: center;
    margin: 130px auto;
    padding-top: 70px;
    font-size: 1em;
    overflow-x: hidden;
}

.about-container {
    margin: 20px 10%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

@media only screen and (max-width: 980px) {
    .about-container {
        display: block;
    }

    .about-content-container {
        padding-top: 20px;
    }

    .portfolio-container {
        margin: auto 20px;
    }
}

.about-content-container {
    flex-basis: 50%;
    text-align: left;
}

.about-img-container {
    flex-basis: 40%;
    justify-content: center;
}

.filipiniana-img {
    height: 80%;
    width: 100%;
    border-radius: 15px;
    box-shadow: 0px 2px 5px 0px #001f3d;
}

.flex-items-1 {
    flex-basis: 30%;
}

.flex-items-2 {
    flex-basis: 30%;
}

.flex-items-3 {
    flex-basis: 30%;
}

.about-description-title {
    font-size: 2em;
    padding-bottom: 10px;
}

.about-description {
    font-size: 1.8em;
    padding-top: 30px;
    text-align: justify;
}

.socmed-icons {
    height: 2.3em;
    width: 2.3em;
    opacity: 0.5;
}

.socmed-div {
    justify-content: space-evenly;
    padding-top: 20px;
}

.icon-link,
a {
    text-decoration: none;
}

/* About Page */

.about-page-header {
    background: #89abe3ff;
    color: #fcf6f5ff !important;
    height: 50px;
    overflow-x: hidden;
}

.about-page-header-title {
    display: flex;
    padding-top: 10px;
    justify-content: center;
}

.about-header-text {
    font-size: 1.5em;
    text-decoration: none;
}

.img-one {
    rotate: -5deg;
}

.img-two {
    position: relative;
    rotate: 10deg;
}

.img-three {
    display: block;
}

.img-four {
    rotate: -5deg;
}


.page-img {
    width: 100%;
    height: 35vh;
    border-radius: 15px;
    box-shadow: 0px 4px 17px 0px #001f3d;
}

/*
Portfolio
*/

.portfolio-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    row-gap: 20px;
    /* overflow-x: hidden; */
}

.portfolio-item {
    overflow: hidden;
    position: relative;
}

.portfolio-img {
    width: 100%;
    height: 30vh;
    object-fit: cover;
    padding: 0 10px;
}

.portfolio-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(137, 172, 227, 0.7);
    display: flex;
    align-items: flex-end;
    padding: 30px;
    opacity: 0;
    color: #fcf6f5ff;
    text-shadow: 1px 2px 0.5px #001f3d;
}

.portfolio-img,
.portfolio-item .portfolio-overlay {
    transition: all 0.4s ease;
}

.portfolio-item:hover .portfolio-overlay {
    opacity: 1;
}

.portfolio-item:hover img {
    transform: scale(1.05);
}

.material-symbols-outlined {
    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
}

/*
Contact Section
*/

.contact {
    height: 700px;
    padding-top: 100px;
    padding-bottom: 50px;
    overflow-x: hidden;
}

label {
    display: flex;
}

.email,
.message {
    background: #fcf6f5ff;
    border: 2px solid #89abe3ff;
}

form {
    margin: 0 auto;
    max-width: 700px;
    padding: 2em 0;
    font-size: 24px;
}

form input {
    width: 24.4em;
    height: 30px;
    border-radius: 5px;
}

form textarea {
    border-radius: 5px;
    height: 180px;
}

button[type="submit"] {
    width: 10em;
    height: 50%;
    font-size: 24px;
    border-radius: 8px;
    background: rgba(137, 172, 227, 0.534);
    border: 2px solid #89abe3ff;
    color: #fcf6f5ff;
    text-shadow: 1px 2px 0.5px #001f3d;
}

.space {
    height: 50px;
    width: auto;
}

/*
footer section
*/

footer {
    height: 50px;
    text-align: center;
    padding-top: 20px;
    font-size: 16px;
}

